# tradingstation

./: .gitignore  README.md  appunti.ipynb  logger.py  lookout_mode.py  main.py  note.ipynb  pyproject.toml  tradingstation.py
alerts/: telegram_alert.py  telegram_handler.py
modes/: closing_mode.py  manual_mode.py  spotter_mode.py
orders/: ordermanager.py  positionmanager.py
signals/: indicators.py  signal_types.py  signals_generator.py
strategies/: base_strategy.py
utils/: data_fetcher.py  exchange_manager.py
