[tool.poetry]
name = "tradingstation"
version = "0.1.0"
description = ""
authors = ["ghiaccionove <ant.cito@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
ccxt = "^4.3.42"
ipykernel = "^6.29.4"
ta-lib = {path = "C:/Users/antci/Projects/tradingstation/TA_Lib-0.4.24-cp310-cp310-win_amd64.whl"}
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
